test/link/script-num-fmt.out
error: script-num-fmt.link(5): Cannot decrease the current address (from $002a to $0029)
Linking failed with 1 error
